# adxe

./: .gitignore  CMakeLists.txt  annotated.html  annotated_dup.js  classes.html  dir_0097242fc585035e09f6b69eb2987414.html  dir_2dd9fccfb1116df72db7c8efb79f57ba.html  dir_3b76b053e062f079b3ce5618d2bdd117.html  dir_3dbf7f7aa501db097520dc2378bed4ed.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4958319e89d199a392a479340bd81d79.html  dir_55d4e817ca1f5c293b38bdf451690ed4.html  dir_57d8680fa0a501ae5a356f9c12f42eb7.html  dir_637dec08cce5ed4547fe53d6a66fe4f6.html  dir_66ffa4fc928ac5d609e8119b92cf83b1.html  dir_67960dcbb0ec48d365e5c356bb2ba21a.html  dir_6a31b32744026f52057632202a0cfd21.html  dir_84e488a1165cda2d855bbdd57ac79e51.html  dir_85d9b9e8dbbe90fb111cf70f59e6a136.html  dir_8fbf3a975118ec9c35d9df0c5586cbe7.html  dir_a65837f62cdf5646f72027ebf1c9290a.html  dir_aadbf42f6209f5cc8c8b54e0dd760dd3.html  dir_b952992678633ce5ff96b3ca450b719d.html  dir_c73af4a5ab68ac28bb75674084260982.html  dir_e013a6b3093d526b264ef8c8204162a6.html  dir_e07ac01d65d17e829451634057f91345.html  dir_e1d7c9d120009fb08f8e0c9e52d3d5d4.html  dir_e47a0da176a2d81021b9e15379f1915c.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  (+101 more)
.github/workflows/: genbindings-ci.yml
cmake/Modules/: CocosBuildHelpers.cmake  CocosConfigDefine.cmake
cocos/: CMakeLists.txt  cocos2d.h
cocos/2d/: CCAction.h  CCActionCatmullRom.h  CCAnimation.h  CCFastTMXTiledMap.cpp  CCNode.cpp  CCNode.h  CCSprite.cpp  CCSprite.h  CCSpriteChunk.cpp  CCSpriteChunk.h  CCSpriteFrame.h  CCTMXLayer.cpp  CCTMXLayer.h  CCTMXTiledMap.cpp  CCTMXTiledMap.h  CCTMXXMLParser.h  CMakeLists.txt
cocos/audio/: AudioEngine.cpp  CMakeLists.txt
cocos/base/: CCConsole.cpp  CCController-apple.mm  CCController.h
cocos/platform/: CCApplication.h  CCApplicationProtocol.h  CCFileUtils.cpp  CCFileUtils.h  CCGL.h  CCGLView.h  CCPlatformConfig.h  CCPlatformDefine.h  CCPlatformMacros.h  CCStdC.h  CMakeLists.txt
cocos/renderer/: CCMaterial.cpp  CCRenderer.h  CMakeLists.txt
cocos/ui/: CMakeLists.txt  UIPageViewIndicator.cpp
core/: CMakeLists.txt  adxe.h
core/2d/: CCFastTMXLayer.cpp  CCFastTMXLayer.h  CCFastTMXTiledMap.cpp  CCFastTMXTiledMap.h  CCFontFreeType.cpp  CCFontFreeType.h  CCNode.h  CCSprite.cpp  CCSprite.h  CCTMXXMLParser.cpp  CCTMXXMLParser.h  CMakeLists.txt
core/audio/: AudioEngine.cpp  AudioEngine.h  AudioEngineImpl.h  AudioEngineImpl.mm  AudioPlayer.cpp  AudioPlayer.h
core/base/: ccTypes.h
core/platform/: CCFileUtils.h  CCPlatformConfig.h  CCPlatformDefine.h  CCStdC.h  CMakeLists.txt
core/renderer/: ccShaders.h
d0/d03/: classcocos2d_1_1_physics_contact_post_solve-members.html  classcocos2d_1_1_t_m_x_tile_anim_manager-members.html
d0/d07/: classcocos2d_1_1_event_listener_touch_all_at_once.html
d0/d0a/: classcocos2d_1_1_fade_in.html
d0/d17/: classcocos2d_1_1_particle_rain-members.html
d0/d20/: classcocos2d_1_1backend_1_1_shader_module_g_l-members.html
d0/d2f/: group__physics__2d.html  (+2 more)
extensions/: CMakeLists.txt
extensions/creator_reader/: CMakeLists.txt  CreatorReader.cpp  CreatorReader.h
extensions/creator_reader/dragonbones/animation/: TimelineState.cpp
extensions/creator_reader/dragonbones/cocos2dx/: CCSlot.cpp
extensions/luacpp/: CMakeLists.txt  LuaContext.cpp
extensions/luacpp/Engine/: LuaTBoolean.cpp  LuaTString.cpp  LuaTTable.cpp
extensions/luacpp/Lua/lua-5.4.4/: CMakeLists.txt
search/: all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_10.js  enums_11.js  enums_12.js  enums_2.js  (+78 more)
(+1085 files in other folders)
